--- a/.air.toml
+++ b/.air.toml
@@ -6,8 +6,8 @@ args_bin = []
 bin = "./tmp/main.exe"
 cmd = "go build -o ./tmp/main.exe ./cmd/api"
 delay = 1000
-exclude_dir = ["assets", "tmp", "vendor", "testdata"]
-exclude_file = []
+exclude_dir = ["assets", "tmp", "vendor", "testdata", ".idea"]
+exclude_file = [".git"]
 exclude_regex = ["_test.go"]
 exclude_unchanged = false
 follow_symlink = false
